--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,30 @@ services:
       - 8000:8000
     volumes:
       - .:/app
+    environment:
+      DB_CONNECTION: mysql
+      DB_HOST: db
+      DB_PORT: 3307
+      DB_DATABASE: shops
+      DB_USERNAME: root
+      DB_PASSWORD: password
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0
+    container_name: mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: shops
+
+
+    volumes:
+      - db_data:/var/lib/mysql
+    ports:
+      - 3307:3307
+    command: --port 3307
+
+volumes:
+  db_data:
